# ScholarAgent

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  Design Document.md  IDE_LAYOUT_PLAN.md  KNOWLEDGE_GRAPH_PLAN.md  KNOWLEDGE_GRAPH_SCAFFOLD.md  KNOWLEDGE_GRAPH_TODOS.md  README.md  REWORK_PLAN.md  ROADMAP.md  SEMANTIC_TOOLTIPS_PHASE1_COMPLETE.md  SEMANTIC_TOOLTIPS_PHASE2_COMPLETE.md  SEMANTIC_TOOLTIPS_PHASE3_COMPLETE.md  SEMANTIC_TOOLTIPS_PHASE4_IMPLEMENTATION.md  SEMANTIC_TOOLTIPS_PLAN.md  SETUP.md  TESTING.md  TOOLTIP_SUGGESTION_SSE_PLAN.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  visualize_tooltip.js
.claude/: code_context.md
backend/: CLAUDE.md  Dockerfile  migrate_db.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_tooltip_pinning_and_ordering.py  003_add_paper_metadata_columns.py  004_add_knowledge_graph_column.py  (+4 more)
backend/app/: llm.py
backend/app/agents/: utils.py  (+3 more)
frontend/: CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  TESTING.md  next.config.mjs  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/__tests__/: README.md  setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/electron/: main.cjs  preload.cjs
frontend/hooks/: useAiPreferences.ts  useApi.ts  usePapers.ts  useTooltips.ts
frontend/lib/: COLOR_PALETTE.md  colors.ts  design-system.ts  mdx.ts
frontend/types/: mathjax.d.ts
frontend/utils/: parseTOC.ts  tooltipGrouping.ts
tests/: conftest.py  test_api.py  test_compiler.py  test_llm.py  test_models.py  test_parser.py
tests/fixtures/: simple_paper.tex
(+51 files in other folders)
